[tool.poetry]
name = "grocerychecker"
version = "0.1.0"
description = ""
authors = ["Anson <anson.aw0618@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^2.1.0"
tabulate = "^0.9.0"
pydantic = "^2.12.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
